<resources>
    <string name="app_name">Sports App</string>
    <string name="appNameLogo">Sports App</string>
    <string name="log_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email_or_phone_number">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="password_is_required">Strong Password is required</string>
    <string name="new_user_create_account">SIGN UP</string>
    <string name="email_is_required">Valid Email is required</string>
    <string name="age_is_required">Age is required</string>
    <string name="age_above_18">Age must be above 18</string>
    <string name="forgot_password"> </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
</resources>